# silk-engine

./: CMakeLists.txt
cmake/: silk.cmake
cmake/modules/: gladConfig.cmake  glfwConfig.cmake  glmConfig.cmake  googletestConfig.cmake  imguiConfig.cmake  nlohmann_jsonConfig.cmake
engine/: CMakeLists.txt
engine/include/silk/: silk.h
engine/include/silk/core/: assert.h  log.h  log_categories.h  platform.h  profiler.h  profiling_scoped_timer.h  signal.h  singleton.h  slot.h  steady_clock.h  types.h  utility.h
engine/include/silk/engine/: engine.h  engine_config.h
engine/include/silk/engine/debug/: debug_tool.h  debug_toolbox.h
engine/include/silk/engine/frame_rate/: frame_rate_timer.h
engine/include/silk/engine/graphics/: camera.h  graphics_context.h  mesh.h  shader.h  texture.h  vertex_buffer.h
engine/include/silk/engine/input/: input_device.h  input_service.h  input_types.h  keyboard_device.h  mouse_device.h
engine/include/silk/engine/input/actions/: input_action.h  input_action_state.h  input_action_watcher.h
engine/include/silk/engine/module/: module_entry_points.h
engine/include/silk/engine/service/: service.h
engine/include/silk/engine/time/: time.h
engine/include/silk/engine/window/: application_window.h  application_window_config.h  application_window_inputs.h
engine/source/: silk.cpp
engine/source/core/: assert.cpp  log.cpp  profiler.cpp  profiling_scoped_timer.cpp
engine/source/engine/: engine.cpp
engine/source/engine/debug/: debug_toolbox.cpp
engine/source/engine/frame_rate/: frame_rate_timer.cpp
engine/source/engine/graphics/: camera.cpp  graphics_context.cpp  mesh.cpp  shader.cpp  texture.cpp  vertex_buffer.cpp
engine/source/engine/input/: input_device.cpp  input_service.cpp  keyboard_device.cpp  mouse_device.cpp
engine/source/engine/input/actions/: input_action.cpp  input_action_state.cpp  input_action_watcher.cpp
engine/source/engine/time/: time.cpp
engine/source/engine/window/: application_window.cpp  input_code_converter.cpp  input_code_converter.h
modules/runtime/: CMakeLists.txt
modules/runtime/include/silk/runtime/: log_categories.h  runtime_module_entry_points.h  runtime_service.h
modules/runtime/source/: runtime_module_entry_points.cpp  runtime_service.cpp
sandbox/: CMakeLists.txt
sandbox/source/: log_categories.h  sandbox_debug_tool.cpp  sandbox_debug_tool.h  sandbox_module_entry_points.cpp  sandbox_module_entry_points.h  silk_sandbox.cpp
tests/: CMakeLists.txt
tests/source/: unit_test_signal_slot.cpp
